force-app/main/default/src/objects/PJN_License__c/PJN_License__c.object-meta.xml
<CustomObject>
    <description>License for Physicians which includes DEA, SLN, etc. This Object allows connection with Veeva Network Licenses.</description>
    <label>License</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>License</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Licenses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>