force-app/main/default/src/objects/PJN_License__c/fields/PJN_Account__c.field-meta.xml
<CustomField>
    <fullName>PJN_Account__c</fullName>
    <description>Parent Account which this License belongs to</description>
    <inlineHelpText>Parent Account which this License belongs to</inlineHelpText>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Licenses</relationshipLabel>
    <relationshipName>PJN_Licenses</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>