force-app/main/default/src/objects/PJN_License__c/fields/PJN_Contact_Information__c.field-meta.xml
<CustomField>
    <fullName>PJN_Contact_Information__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The address this license applies to</description>
    <label>Contact Information</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>The address must be an address of the Account&apos;s</errorMessage>
        <filterItems>
            <field>$Source.PJN_Account__c</field>
            <operation>equals</operation>
            <valueField>PJN_Contact_Information__c.PJN_Account__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>PJN_Contact_Information__c</referenceTo>
    <relationshipLabel>Licenses</relationshipLabel>
    <relationshipName>PJN_Licenses</relationshipName>
    <type>Lookup</type>
</CustomField>