force-app/main/default/src/objects/PJN_License__c/fields/PJN_Contact_Information_Network_Id__c.field-meta.xml
<CustomField>
    <fullName>PJN_Contact_Information_Network_Id__c</fullName>
    <formula>IF(AND(NOT(ISNULL(PJN_Contact_Information__c)), NOT(ISBLANK(PJN_Contact_Information__r.PJN_Veeva_Network_Id__c))),
&quot;Network:Address:&quot; + PJN_Contact_Information__r.PJN_Veeva_Network_Id__c,
&quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Information Network Id</label>
    <type>Text</type>
</CustomField>