force-app/main/default/src/objects/PJN_License__c/fields/PJN_Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>PJN_Expiration_Date__c</fullName>
    <description>The license&apos;s expiration date</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The license&apos;s expiration date</inlineHelpText>
    <label>Expiration Date</label>
    <type>Date</type>
</CustomField>