force-app/main/default/src/objects/PJN_License__c/fields/PJN_Grace_Period__c.field-meta.xml
<CustomField>
    <fullName>PJN_Grace_Period__c</fullName>
    <description>The date the license will expire accounting for the grace period</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The date the license will expire accounting for the grace period</inlineHelpText>
    <label>Grace Period</label>
    <type>Date</type>
</CustomField>