force-app/main/default/src/objects/PJN_License__c/fields/PJN_Status__c.field-meta.xml
<CustomField>
    <fullName>PJN_Status__c</fullName>
    <description>The status of the license</description>
    <inlineHelpText>The status of the license</inlineHelpText>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A</fullName>
                <label>Active</label>
            </value>
            <value>
                <fullName>I</fullName>
                <label>Inactive</label>
            </value>
            <value>
                <fullName>U</fullName>
                <label>Unknown</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>