force-app/main/default/src/objects/PJN_License__c/fields/PJN_Type__c.field-meta.xml
<CustomField>
    <fullName>PJN_Type__c</fullName>
    <description>The type of license</description>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>STATE</fullName>
            </value>
            <value>
                <fullName>ADDRESS</fullName>
            </value>
            <value>
                <fullName>CDS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>