force-app/main/default/src/objects/PJN_License__c/recordTypes/PJN_CDS_License.recordType-meta.xml
<RecordType>
    <fullName>PJN_CDS_License</fullName>
    <active>true</active>
    <description>A Controlled and Dangerous Substances license</description>
    <label>CDS License</label>
</RecordType>