force-app/main/default/src/objects/PJN_License__c/recordTypes/PJN_DEA_License.recordType-meta.xml
<RecordType>
    <fullName>PJN_DEA_License</fullName>
    <active>true</active>
    <description>A Drug Enforcement Administration license</description>
    <label>DEA License</label>
</RecordType>