force-app/main/default/src/objects/PJN_License__c/recordTypes/PJN_State_License_Number.recordType-meta.xml
<RecordType>
    <fullName>PJN_State_License_Number</fullName>
    <active>true</active>
    <description>An Physicians State License Number</description>
    <label>State License Number</label>
</RecordType>